--- a/TensorFlow/intro_to_tensorflow.ipynb
+++ b/TensorFlow/intro_to_tensorflow.ipynb
@@ -200,11 +200,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tests Passed!\n"
+     ]
+    }
+   ],
    "source": [
     "# Problem 1 - Implement Min-Max scaling for grayscale image data\n",
     "def normalize_grayscale(image_data):\n",
@@ -214,6 +222,12 @@
     "    :return: Normalized image data\n",
     "    \"\"\"\n",
     "    # TODO: Implement Min-Max scaling for grayscale image data\n",
+    "    # normalized = np.array([])\n",
+    "    # for x in np.nditer(image_data):\n",
+    "    #     dx = 0.1 + ((x*0.8)/255)\n",
+    "    #     normalized = np.append(normalized, dx)\n",
+    "    # return normalized\n",
+    "    return 0.1 + ((image_data*0.8)/255)\n",
     "\n",
     "\n",
     "### DON'T MODIFY ANYTHING BELOW ###\n",
@@ -228,21 +242,38 @@
     "    [0.1, 0.103137254902, 0.13137254902, 0.162745098039, 0.194117647059, 0.225490196078, 0.830980392157, 0.865490196078,\n",
     "     0.896862745098, 0.9])\n",
     "\n",
-    "if not is_features_normal:\n",
-    "    train_features = normalize_grayscale(train_features)\n",
-    "    test_features = normalize_grayscale(test_features)\n",
-    "    is_features_normal = True\n",
-    "\n",
     "print('Tests Passed!')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
+   "source": [
+    "if not is_features_normal:\n",
+    "    train_features = normalize_grayscale(train_features)\n",
+    "    test_features = normalize_grayscale(test_features)\n",
+    "    is_features_normal = True"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Labels One-Hot Encoded\n"
+     ]
+    }
+   ],
    "source": [
     "if not is_labels_encod:\n",
     "    # Turn labels into numbers and apply One-Hot Encoding\n",
@@ -261,14 +292,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training features and labels randomized and split.\n"
+     ]
+    }
+   ],
    "source": [
-    "assert is_features_normal, 'You skipped the step to normalize the features'\n",
     "assert is_labels_encod, 'You skipped the step to One-Hot Encode the labels'\n",
+    "assert is_features_normal, 'You skipped the step to normalize the features'\n",
     "\n",
     "# Get randomized datasets for training and validation\n",
     "train_features, valid_features, train_labels, valid_labels = train_test_split(\n",
@@ -282,11 +321,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving data to pickle file...\n",
+      "Data cached in pickle file.\n"
+     ]
+    }
+   ],
    "source": [
     "# Save the data for easy access\n",
     "pickle_file = 'notMNIST.pickle'\n",
@@ -321,11 +369,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/d064714/anaconda/envs/dlnd-tf-lab/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n",
+      "/Users/d064714/anaconda/envs/dlnd-tf-lab/lib/python3.5/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
+      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data and modules loaded.\n"
+     ]
+    }
+   ],
    "source": [
     "%matplotlib inline\n",
     "\n",
